// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IFrame Converter oboToSlate converts an OboNode to a Slate node 1`] = `
Object {
  "children": Array [
    Object {
      "text": "",
    },
  ],
  "content": Object {},
  "id": "mockKey",
  "type": "mockType",
}
`;

exports[`IFrame Converter oboToSlate converts an OboNode to a Slate node with media defaults 1`] = `
Object {
  "children": Array [
    Object {
      "text": "",
    },
  ],
  "content": Object {
    "type": "media",
  },
  "id": "mockKey",
  "type": "mockType",
}
`;

exports[`IFrame Converter oboToSlate converts an OboNode to a Slate node with triggers 1`] = `
Object {
  "children": Array [
    Object {
      "text": "",
    },
  ],
  "content": Object {
    "triggers": "mock-triggers",
  },
  "id": "mockKey",
  "type": "mockType",
}
`;

exports[`IFrame Converter oboToSlate converts an OboNode to a Slate node with webpage defaults 1`] = `
Object {
  "children": Array [
    Object {
      "text": "",
    },
  ],
  "content": Object {
    "type": "webpage",
  },
  "id": "mockKey",
  "type": "mockType",
}
`;

exports[`IFrame Converter slateToObo converts a Slate node to an OboNode with content 1`] = `
Object {
  "children": Array [],
  "content": Object {},
  "id": "mockKey",
  "type": "mockType",
}
`;
